<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/navigator"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:contentDescription="@string/lbl_background_perfil"
            android:scaleType="fitXY"
            android:src="@drawable/woman_with_dogs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/lbl_user_icon"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/txtMenuHeader1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMenuHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="projeto.mynew@pets.com"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/icons"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
