<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.projeto.pets.activity.AdActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="?android:attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:minHeight="?attr/actionBarSize"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Informações Obrigatórias"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/navigator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rdgOpt1"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdoSale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_sale"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/navigator"
                        android:theme="@style/mCheckBoxBlue" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdoAdoption"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_adoption"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/navigator"
                        android:theme="@style/mCheckBoxBlue" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rdgOpt2"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdoLimpo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_puppy"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/navigator"
                        android:theme="@style/mCheckBoxBlue" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdoOutro"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_brood"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/navigator"
                        android:theme="@style/mCheckBoxBlue" />
                </RadioGroup>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spnBreed"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardElevation="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="Idade"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/navigator" />

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/sekAge"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    card_view:dsb_indicatorColor="@color/navigator"
                    card_view:dsb_max="10"
                    card_view:dsb_progressColor="@color/navigator"
                    card_view:dsb_rippleColor="@color/navigator"
                    card_view:dsb_trackColor="@color/navigator" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Endereço"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailSubject"
                        android:maxLength="@integer/user_address_limit"
                        android:maxLines="1"
                        android:textColor="@color/navigator"
                        android:textColorHint="@color/navigator" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Preço"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailSubject"
                        android:maxLength="@integer/user_address_limit"
                        android:maxLines="1"
                        android:textColor="@color/navigator"
                        android:textColorHint="@color/navigator" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:theme="@style/TextLabel">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/digits_phone"
                        android:hint="Telefone"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="@integer/user_phone_limit_edt"
                        android:maxLines="1"
                        android:textColor="@color/navigator"
                        android:textColorHint="@color/navigator" />

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.v7.widget.AppCompatSeekBar-->
                <!--android:id="@+id/seek"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?android:attr/actionBarSize"-->
                <!--android:max="10"-->
                <!--android:progress="5"-->
                <!--android:progressBackgroundTint="@color/primary_text"-->
                <!--android:progressTint="@color/navigator"-->
                <!--android:thumbTint="@color/navigator" />-->

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="top|end"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--android:clickable="true"-->
    <!--android:foreground="?android:attr/selectableItemBackground"-->
    <!--card_view:backgroundTint="@color/navigator"-->
    <!--card_view:layout_anchorGravity="bottom|end"-->
    <!--card_view:srcCompat="@drawable/ic_vec_camera" />-->

</android.support.design.widget.CoordinatorLayout>


